support 4 new formats

--- a/frontend/scss/components/atoms/component-frame.scss
+++ b/frontend/scss/components/atoms/component-frame.scss
@@ -92,3 +92,23 @@ format modifiers for differen color rendering (e.g. websites -> blue border, ads
   &:before { border-color: color('confetti'); }
   &:after { @include gradient-e-mails; }
 }
+
+@mixin component-frame-food {
+  &:before { border-color: color('robins-egg'); }
+  &:after { @include gradient-food; }
+}
+
+@mixin component-frame-drugs {
+  &:before { border-color: color('school-bus'); }
+  &:after { @include gradient-drugs; }
+}
+
+@mixin component-frame-cosmetics {
+  &:before { border-color: color('lav-magenta'); }
+  &:after { @include gradient-cosmetics; }
+}
+
+@mixin component-frame-textiles {
+  &:before { border-color: color('confetti'); }
+  &:after { @include gradient-textiles; }
+}
