--- a/frontend/templates/views/partials/teaser-tags.j2
+++ b/frontend/templates/views/partials/teaser-tags.j2
@@ -13,4 +13,16 @@
   {% if 'email' in formats %}
   <div class="ap-m-tag ap-m-tag-email"></div>
   {% endif %}
+  {% if 'food' in formats %}
+  <div class="ap-m-tag ap-m-tag-food"></div>
+  {% endif %}
+  {% if 'drugs' in formats %}
+  <div class="ap-m-tag ap-m-tag-drugs"></div>
+  {% endif %}
+  {% if 'cosmetics' in formats %}
+  <div class="ap-m-tag ap-m-tag-cosmetics"></div>
+  {% endif %}
+  {% if 'textiles' in formats %}
+  <div class="ap-m-tag ap-m-tag-textiles"></div>
+  {% endif %}
 </div>
