--- a/frontend/scss/components/organisms/format-explainer.scss
+++ b/frontend/scss/components/organisms/format-explainer.scss
@@ -160,6 +160,11 @@
     &-ads.active { @include gradient-ads; }
     &-email.active { @include gradient-e-mails; }
 
+    &-food.active { @include gradient-food; }
+    &-drugs.active { @include gradient-drugs; }
+    &-cosmetics.active { @include gradient-cosmetics; }
+    &-textiles.active { @include gradient-textiles; }
+
     &-icon {
       width: 30px;
       height: 30px;
