--- a/frontend/templates/layouts/default.j2
+++ b/frontend/templates/layouts/default.j2
@@ -2,7 +2,7 @@
 [% supportedFormats formats={{ doc.formats|tojson }} %]
 {% endif %}
 
-{% macro filter(formats='websites, ads, stories, email', level='advanced, beginner') -%}
+{% macro filter(formats='websites, ads, stories, email, food, drugs, cosmetics, textiles', level='advanced, beginner') -%}
 {% if not formats.strip() and not level.strip() %}
 {{ caller() }}
 {% else %}
