--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -105,4 +105,32 @@
       @include ci-beta;
     }
   }
+
+  &-link:hover,
+  &-selected {
+    &.--food {
+      @include ci-food;
+    }
+  }
+
+  &-link:hover,
+  &-selected {
+    &.--drugs {
+      @include ci-drugs;
+    }
+  }
+
+  &-link:hover,
+  &-selected {
+    &.--cosmetics {
+      @include ci-cosmetics;
+    }
+  }
+
+  &-link:hover,
+  &-selected {
+    &.--textiles {
+      @include ci-textiles;
+    }
+  }
 }
