--- a/frontend/templates/views/partials/header.j2
+++ b/frontend/templates/views/partials/header.j2
@@ -83,7 +83,7 @@
     {% do doc.icons.useIcon('/icons/logo.svg') %}
     {% do doc.icons.useIcon('/icons/angle-down-solid.svg') %}
 
-    {% set flyout_icons = ['amp-websites', 'amp-stories', 'amp-ads', 'amp-email', 'amp-food', 'amp-drugs', 'amp-cosmetics', 'amp-textiles', 'start', 'guides-documents', 'components-flyout', 'examples-flyout', 'learn', 'template', 'wrench'] %}
+    {% set flyout_icons = ['amp-websites', 'amp-stories', 'amp-ads', 'amp-email', 'start', 'guides-documents', 'components-flyout', 'examples-flyout', 'learn', 'template', 'wrench'] %}
     {% for icon in flyout_icons %}
     {% do doc.icons.useIcon('/icons/' + icon + '.svg') %}
     {% endfor %}
