--- a/frontend/scss/components/atoms/format-tags.scss
+++ b/frontend/scss/components/atoms/format-tags.scss
@@ -30,7 +30,7 @@
     @include gradient-e-mails;
     @include color-e-mails;
   }
-
+/*
   &-food {
     @include gradient-food;
     @include color-food;
@@ -50,4 +50,5 @@
     @include gradient-textiles;
     @include color-textiles;
   }
+*/
 }
