--- a/frontend/scss/components/atoms/format-tags.scss
+++ b/frontend/scss/components/atoms/format-tags.scss
@@ -1,4 +1,4 @@
-/* @import '../../extends'; */
+@import '../../extends';
 @import '_functions.scss';
 @import '_mixins.scss';
 @import '_variables.scss';
@@ -31,7 +31,7 @@
     @include color-e-mails;
   }
 
-/*
+/* breaks 2019
   &-food {
     @include gradient-food;
     @include color-food;
