--- a/frontend/scss/components/molecules/format-toggle.scss
+++ b/frontend/scss/components/molecules/format-toggle.scss
@@ -104,7 +104,7 @@
     }
   }
 
-
+/*
   &-link-food {
     &:hover, &.#{molecule('format-toggle')}-selected  {
       @include gradient-food; color: color('white');
@@ -132,7 +132,7 @@
       .#{atom('ico')} { fill: color('charade'); }
     }
   }
-
+*/
 
   &-angle {
     margin-right: 0;
