--- a/frontend21/scss/components/tag.scss
+++ b/frontend21/scss/components/tag.scss
@@ -27,6 +27,10 @@
     @include ci-beta;
   }
 
+  &.--ontomatica {
+    @include ci-ontomatica;
+  }
+
   &.--general {
     color: color('white');
     background: color('blue-ribbon');
