update formats and format-toggle

--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -105,4 +105,11 @@
       @include ci-beta;
     }
   }
+
+  &-link:hover,
+  &-selected {
+    &.--ontomatica {
+      @include ci-ontomatica;
+    }
+  }
 }
