--- a/frontend21/amp-dev.ejs
+++ b/frontend21/amp-dev.ejs
@@ -2,7 +2,7 @@
 [% supportedFormats formats={{ doc.formats|tojson }} %]
 {% endif %}
 
-{% macro filter(formats='websites, ads, stories, email, food, drugs, cosmetics, textiles', level='advanced, beginner') -%}
+{% macro filter(formats='websites, ads, stories, email', level='advanced, beginner') -%}
 {% if not formats.strip() and not level.strip() %}
 {{ caller() }}
 {% else %}
@@ -43,6 +43,8 @@
 
     <link rel="preload" href="/static/fonts/poppins-v5-latin-700.woff2" as="font" crossorigin>
     <link rel="preload" href="/static/fonts/noto-sans-v7-latin-700.woff2" as="font" crossorigin>
+    <link rel="preload" href="/static/fonts/Raleway-ExtraBold.ttf" as="font" crossorigin>
+    <link rel="preload" href="/static/fonts/RussoOne-Regular.ttf" as="font" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     {% if podspec.env.name == 'development' %}
     <link rel="shortcut icon" href="/static/img/favicon-local.png"/>
