updated logo icon

--- a/frontend/templates/views/partials/header.j2
+++ b/frontend/templates/views/partials/header.j2
@@ -10,7 +10,7 @@
 {% macro navigation() -%}
 <a class="ap-o-header-home" href="{{g.doc('/content/amp-dev/index.html', locale=doc.locale).url.path}}">
   <svg class="ap-o-header-home-logo"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
-  <span class="ap-o-header-home-title">AMP</span>
+  {# <span class="ap-o-header-home-title">AMP</span> #}
 </a>
 
 <nav class="ap-o-header-main">
