removed raleway and russo from ejs

--- a/frontend21/amp-dev.ejs
+++ b/frontend21/amp-dev.ejs
@@ -43,8 +43,6 @@
 
     <link rel="preload" href="/static/fonts/poppins-v5-latin-700.woff2" as="font" crossorigin>
     <link rel="preload" href="/static/fonts/noto-sans-v7-latin-700.woff2" as="font" crossorigin>
-    <link rel="preload" href="/static/fonts/Raleway-ExtraBold.ttf" as="font" crossorigin>
-    <link rel="preload" href="/static/fonts/RussoOne-Regular.ttf" as="font" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     {% if podspec.env.name == 'development' %}
     <link rel="shortcut icon" href="/static/img/favicon-local.png"/>
@@ -52,7 +50,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.png"/>
     {% endif %}
 
-    <meta name="theme-color" content="#005af0"/>
+    <meta name="theme-color" content="#1f64ff"/>
 
     <link rel="canonical" href="{{ doc.url }}"/>
     <link rel="alternate" hreflang="x-default" href="{{ doc.localize(podspec.default_locale).url }}"/>
