--- a/frontend21/scss/variables.scss
+++ b/frontend21/scss/variables.scss
@@ -25,6 +25,7 @@ $colors: (
   'clementine': #ec6600,
   'bittersweet': #f56c64,
   'guardsman-red': #c80000,
+  'peach-orange': #ffcc99,
   'slack': #45184b,
   'lav-magenta': #eb49e1,
   'electric-violet': #5500d7,
