updated format; reduced website gradient to single entry

--- a/frontend21/scss/components/home/formats.scss
+++ b/frontend21/scss/components/home/formats.scss
@@ -96,8 +96,7 @@ $gap: 10px;
         visibility: hidden;
 
         &.websites {
-          fill: url('#gradient-websites-1') color('black');
-          fill: url('#gradient-websites-2') color('black');
+          fill: url('#gradient-websites') color('black');
         }
 
         &.stories {
