--- a/frontend21/scss/components/home/formats.scss
+++ b/frontend21/scss/components/home/formats.scss
@@ -292,7 +292,7 @@ $gap: 10px;
       .ads & {
         @include ci-ads;
       }
-
+/*
       .daily-care & {
         @include ci-daily-care;
       }
@@ -316,7 +316,7 @@ $gap: 10px;
       .ontomatica & {
         @include ci-ontomatica;
       }
-
+*/
       svg {
         position: absolute;
         height: 100%;
