--- a/frontend21/scss/mixins.scss
+++ b/frontend21/scss/mixins.scss
@@ -79,7 +79,7 @@
     fill: currentColor;
   }
 }
-
+/*
 @mixin ci-daily-care {
   background: linear-gradient(
     225deg,
@@ -157,7 +157,7 @@
     fill: currentColor;
   }
 }
-
+*/
 @mixin scrollbar {
   &::-webkit-scrollbar {
     width: 6px;
