--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -91,7 +91,7 @@
       @include ci-e-mails;
     }
   }
-
+/*
   &-link:hover,
   &-selected {
     &.--daily-care {
@@ -133,4 +133,5 @@
       @include ci-ontomatica;
     }
   }
+*/
 }
