--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -184,8 +184,7 @@
             height: 100%;
 
             .websites & {
-              fill: url('#gradient-websites-1') color('black');
-              fill: url('#gradient-websites-2') color('black');
+              fill: url('#gradient-websites') color('black');
             }
 
             .stories & {
