added daily-care for mixins, formats, home

--- a/frontend21/scss/components/home/formats.scss
+++ b/frontend21/scss/components/home/formats.scss
@@ -95,6 +95,10 @@ $gap: 10px;
         &.email {
           fill: url('#gradient-email') color('black');
         }
+
+        &.daily-care {
+          fill: url('#gradient-daily-care') color('black');
+        }
       }
 
       svg {
@@ -244,6 +248,10 @@ $gap: 10px;
 
     .ads & {
       @include ci-ads;
+    }
+
+    .daily-care & {
+      @include ci-daily-care;
     }
 
     svg {
