--- a/frontend21/scss/mixins.scss
+++ b/frontend21/scss/mixins.scss
@@ -119,7 +119,7 @@
     fill: currentColor;
   }
 }
-
+*/
 @mixin ci-export-import-data {
   background: linear-gradient(
     225deg,
@@ -132,7 +132,7 @@
     fill: currentColor;
   }
 }
-
+/*
 @mixin ci-food-data-institute {
   background: linear-gradient(
     225deg,
