--- a/frontend21/scss/components/home/formats.scss
+++ b/frontend21/scss/components/home/formats.scss
@@ -28,8 +28,27 @@ $gap: 10px;
     }
   }
 
+  /* @include respond-to('large') { */
+    /* grid-column: 1/-1; */
+  /* } */
+
   @include respond-to('large') {
     grid-column: 1/-1;
+    .ap-formats-format {
+      flex: 1 0 calc(16.666% - (2 * #{$gap})); /* Adjusted for 6 boxes per row */
+    }
+  }
+
+  @include respond-to('xlarge') {
+    .ap-formats-format {
+      flex: 1 0 calc(16.666% - (2 * #{$gap})); /* Adjusted for 6 boxes per row */
+    }
+  }
+
+  @include respond-to('max') {
+    .ap-formats-format {
+      flex: 1 0 calc(16.666% - (2 * #{$gap})); /* Adjusted for 6 boxes per row */
+    }
   }
 
   &-navigation {
@@ -107,10 +126,18 @@ $gap: 10px;
         &.export-import-data {
           fill: url('#gradient-export-import-data') color('black');
         }
+        
         &.electronic-label {
           fill: url('#gradient-electronic-label') color('black');
         }
 
+        &.ontomatica {
+          fill: url('#gradient-ontomatica') color('black');
+        }
+
+        &.food-data-institute {
+          fill: url('#gradient-food-data-institute') color('black');
+        }
       }
 
       svg {
@@ -155,6 +182,7 @@ $gap: 10px;
       }
     }
 
+    &.ontomatica,
     &.electronic-label,
     &.export-import-data,
     &.websites,
@@ -224,6 +252,7 @@ $gap: 10px;
     @include respond-to('medium') {
       display: initial;
 
+      .ontomatica &,
       .electronic-label &,
       .export-import-data &,
       .websites &,
@@ -280,6 +309,14 @@ $gap: 10px;
 
     .electronic-label & {
       @include ci-electronic-label;
+    }
+
+    .food-data-institute & {
+      @include ci-food-data-institute;
+    }
+
+    .ontomatica & {
+      @include ci-ontomatica;
     }
 
     svg {
