--- a/frontend21/scss/components/home/formats.scss
+++ b/frontend21/scss/components/home/formats.scss
@@ -244,8 +244,10 @@ $gap: 10px;
   }
 
   &-logo {
-    width: 50px;
-    height: 50px;
+    /* width: 50px; */
+    /* height: 50px; */
+    width: 48px;
+    height: 48px;
     margin-bottom: 15px;
     display: none;
 
