--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -198,6 +198,10 @@
             .email & {
               fill: url('#gradient-email') color('black');
             }
+
+            .guides-documents & {
+              fill: url('#gradient-guides-documents') color('black');
+            }
           }
         }
 
