added favicon and updated amp-dev.ejs

--- a/frontend21/amp-dev.ejs
+++ b/frontend21/amp-dev.ejs
@@ -47,7 +47,7 @@
     {% if podspec.env.name == 'development' %}
     <link rel="shortcut icon" href="/static/img/favicon-local.png"/>
     {% else %}
-    <link rel="shortcut icon" href="/static/img/favicon.png"/>
+    <link rel="shortcut icon" href="/static/img/favicon.svg" type="image/svg+xml"/>
     {% endif %}
 
     <meta name="theme-color" content="#1f64ff"/>
