--- a/frontend/templates/views/partials/footer.j2
+++ b/frontend/templates/views/partials/footer.j2
@@ -3,7 +3,7 @@
 <footer class="ap--footer">
   <div class="ap-o-footer">
     <div class="ap-o-footer-line-top">
-      <div class="ap-o-footer-hint">{{ _('Of course, this site is made with AMP!') }}</div>
+      <div class="ap-o-footer-hint">{{ _('accordion footer goes here') }}</div>
     </div>
   </div>
 
