--- a/frontend/templates/layouts/default.j2
+++ b/frontend/templates/layouts/default.j2
@@ -2,8 +2,7 @@
 [% supportedFormats formats={{ doc.formats|tojson }} %]
 {% endif %}
 
-{# {% macro filter(formats='websites, ads, stories, email', level='advanced, beginner') -%} #}
-{% macro filter(formats='stories', level='advanced, beginner') -%}
+{% macro filter(formats='websites, ads, stories, email', level='advanced, beginner') -%}
 {% if not formats.strip() and not level.strip() %}
 {{ caller() }}
 {% else %}
@@ -48,7 +47,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.png"/>
     {% endif %}
 
-    <meta name="theme-color" content="#005af0"/>
+    <meta name="theme-color" content="#1f64ff"/>
 
     <link rel="canonical" href="{{ doc.url }}"/>
     <link rel="alternate" hreflang="x-default" href="{{ doc.localize(podspec.default_locale).url }}"/>
