added new favicon to 2019-default

--- a/frontend/templates/layouts/default.j2
+++ b/frontend/templates/layouts/default.j2
@@ -44,7 +44,7 @@
     {% if podspec.env.name == 'development' %}
     <link rel="shortcut icon" href="/static/img/favicon-local.png"/>
     {% else %}
-    <link rel="shortcut icon" href="/static/img/favicon.png"/>
+    <link rel="shortcut icon" href="/static/img/favicon-64x64.png"/>
     {% endif %}
 
     <meta name="theme-color" content="#1f64ff"/>
