--- a/frontend/templates/views/detail/success-story-detail.j2
+++ b/frontend/templates/views/detail/success-story-detail.j2
@@ -127,8 +127,10 @@
         {% if content.layout == 'text-media' %}
           <div class="ap-o-text-media-block ap--container-fluid">
             <div class="ap-m-text-media text ap-m-copy">
-              {% if content.headline %}<h2>{{content.headline|safe}}</h2>{% endif %}
-              <p>{{content.text|safe}}</p>
+              {% if content.headline %}
+                <h2>{{ _(content.headline|safe) }}</h2>
+              {% endif %}
+              <p>{{ _(content.text|safe) }}</p>
             </div>
             {% if content.background %}
               <div class="ap-m-text-media media bg-{{content.background}}">
@@ -180,8 +182,10 @@
         {% if content.layout == 'text' %}
           <div class="ap--container-fluid">
             <div class="ap-o-text-media-block ap-o-text-media-block-center ap-m-copy">
-              {% if content.headline %}<h2>{{content.headline|safe}}</h2>{% endif %}
-              <p>{{content.text|safe}}</p>
+              {% if content.headline %}
+                <h2>{{ _(content.headline|safe) }}</h2>
+              {% endif %}
+              <p>{{ _(content.text|safe) }}</p>
             </div>
           </div>
         {% endif %}
@@ -265,9 +269,9 @@
             </div>
             <div class="ap-m-quote-quote">
               <blockquote>
-                <p class="ap-a-txt">{{content.quote|safe}}</p>
+                <p class="ap-a-txt">{{ _(content.quote|safe) }}</p>
               </blockquote>
-              <p>{{content.author|safe}}</p>
+              <p>{{ _(content.author|safe) }}</p>
                 {% if story_url %}
                 <a href="{{story_url}}" class="ap-m-lnk">
                   <div class="ap-a-ico ap-m-lnk-icon">
@@ -286,8 +290,10 @@
         {% if content.layout == 'text-button' %}
           <div class="ap-o-text-media-block ap--container-fluid">
             <div class="ap-m-text-media text ap-m-copy">
-              {% if content.headline %}<h2>{{content.headline|safe}}</h2>{% endif %}
-              <p>{{content.text|safe}}</p>
+              {% if content.headline %}
+                <h2>{{ _(content.headline|safe) }}</h2>
+              {% endif %}
+              <p>{{ _(content.text|safe) }}</p>
               <a href="{{content.download_url}}" target="_blank" class="ap-m-lnk ap-m-lnk-square">
                 <div class="ap-a-ico ap-m-lnk-icon">
                   {% do doc.icons.useIcon('icons/internal.svg') %}
