--- a/frontend/templates/views/partials/category-filter.j2
+++ b/frontend/templates/views/partials/category-filter.j2
@@ -1,14 +1,14 @@
 {% do doc.styles.addCssFile('css/components/organisms/filter-bubbles-list.css') %}
-{% do doc.styles.addCssFile('css/components/atoms/pill.css -100') %}
+{% do doc.styles.addCssFile('css/components/atoms/pill.css') %}
 
 <div class="ap-o-filter-bubbles-list">
   <a class="ap-a-pill [% if not {{ filter_categories }}.includes(category)%]filtered[% endif %]" href="{{ doc.url.path }}#filter" name="all">
     {{ _('All') }}
   </a>
-  {% for category, docs in categories %}
+  {% for category, components in categories %}
   {% set scope = namespace(categoryFormats = []) %}
-    {% for doc in docs %}
-      {% set formats = doc.formats or ['websites'] %}
+    {% for component in components %}
+      {% set formats = component.formats or ['websites'] %}
       {% set scope.categoryFormats = scope.categoryFormats + formats %}
     {% endfor %}
   {% if category %}
